--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev":"npx tailwindcss -i ./src/input.css -o ./style.css --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev":"npx tailwindcss -i ./src/input.css -o ./output.css --watch",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tailwindcss build ./src/input.css -o ./style.css"
   },
   "keywords": [],
   "author": "",
